2000-02-23  Alexander V. Lukyanov  <lav@yars.free.net>

	* ftpclass.cc, ftpclass.h: raise log level of CWD reply to 3.
	* MirrorJob.cc: log directory if verbose>=3; show directory in status.
	* misc.cc, misc.h: (squeeze_file_name) new function (from CopyJob).
	* CopyJob.cc: use it.

2000-02-22  Alexander V. Lukyanov  <lav@yars.free.net>

	* complete.cc: implement LOCAL_DIR mode; recognize -O;
	  use LOCAL_DIR for lcd.
	* FtpListInfo.cc: add OS2 list parser.

2000-02-20  Alexander V. Lukyanov  <lav@yars.free.net>

	* CmdExec.cc, CmdExec.h, commands.cc: (saved_session) new member;
	  save old session while new host name is verified and restore on error.
	* NetAccess.cc: nullify cwd too on bad host name error.
	* FileAccess.cc: (Rename) correct typo (which caused core dumps).

2000-02-19  Alexander V. Lukyanov  <lav@yars.free.net>

	* FileCopy.cc: count Buffered() change even when input buffer is empty.
	* Speedometer.cc: protect from rate<0.

2000-02-17  Alexander V. Lukyanov  <lav@yars.free.net>

	* ftpclass.cc: workaround server's y2k bug in MDTM.
	  (reported by Robert de Bath <rdebath@poboxes.com>)

2000-02-15  Alexander V. Lukyanov  <lav@yars.free.net>

	* CmdExec.cc: (SuspendJob) print a better status for CopyJobEnv.
	* Speedometer.cc: reduce initial rate period to 2 seconds.

2000-02-14  Alexander V. Lukyanov  <lav@yars.free.net>

	* ftpclass.cc: close data socket when switching to no-rest mode.
	* HttpDir.cc: strip quotes from refresh URL.

2000-02-12  Alexander V. Lukyanov  <lav@yars.free.net>

	* CmdExec.cc, GetPass.cc, Job.cc, LsCache.cc, MirrorJob.cc, ResMgr.cc,
	  alias.cc, commands.cc, complete.cc, lftp.cc, netrc.cc, parsecmd.cc,
	  pgetJob.cc:
	  call xfree everywhere.
	* Filter.cc: use xfree and xgetcwd.
	* Resolver.cc: don't dup2 to fd 1.
	* SMTask.cc: add task_count and debug.
	* SleepJob.cc: use TimeoutS.
	* ftpclass.cc, ftpclass.h: add FreeResult method.
	* misc.cc: (xgetcwd) call xmalloc_register_block.