@@ -65,6 +65,8 @@ public:
 
    char	 *cmdline;
    virtual void ListJobs(int verbose_level,int indent=0);
+   void PrintJobTitle(int indent=0,const char *suffix=0);
+   void ListOneJob(int verbose,int indent=0,const char *suffix=0);
    void ListOneJobRecursively(int verbose,int indent);
    void ListDoneJobs();
    void BuryDoneJobs();
