@@ -1,3 +1,8 @@
+2000-02-24  Alexander V. Lukyanov  <lav@yars.free.net>
+
+	* Job.cc, Job.h, CmdExec.cc: (Job::ListOneJob, Job::PrintJobTitle) new
+	  methods; use them.
+
 2000-02-23  Alexander V. Lukyanov  <lav@yars.free.net>
 
 	* ftpclass.cc, ftpclass.h: raise log level of CWD reply to 3.
